adicionando emojis e simbolos

--- a/modulo1/ex2/index.html
+++ b/modulo1/ex2/index.html
@@ -18,12 +18,31 @@
 
 
         jeito, basta por no meio das tags
-        &lt;p&gt; &lt;/p&gt;
+        &lt;p&gt; &lt;/p&gt; <!--less than e grater than  -->
     </p>
 
     <p>
         se precisar quebrar o texto em uma parte <br>especifica posso usar a tag &lt;br&gt;
         (br é break row)
+    </p>
+
+    <p>
+        vamos ver alguns simbolos
+        <br>
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &cent;
+        &delta;
+        &Delta;
+    </p>
+
+    <p>
+        adicionando alguns emojis (busquei esse do emojipedia)
+        <br>
+        sempre incluir "&%x" antes do hexadecimal do emoji         &#x1f596;
     </p>
 
 </body>
