--- a/modulo1/ex9/index.html
+++ b/modulo1/ex9/index.html
@@ -4,38 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listas krai</title>
 </head>
 
 <body>
-    <h1>outras formatacoes</h1>
-    <h2>codigo fonte</h2>
-    <p>o comando <code>document.getElementById("teste")</code> é escrito em javaScript</p>
-    <pre>
-        <code>
-            num = int(input("digite um numero"))
-            if (num % 2 == 0):
-                print(f"o numero {num}" é par)
-            else:
-                print(f"o numero {num}" é impar)
-        </code>
-    </pre>
+    <h1>trabalhando com listas</h1>
+    <h2>listas ordenadas</h2>
+    <ol>
+        <li>acorda</li>
+        <li>joao te ligao</li>
+        <li>joao atende</li>
+        <li>tomar cafe</li>
+        <li>escovar dentes</li>
+    </ol>
 
-    <h2>Citacoes simples</h2>
-    <p>Como diria o pai de um amigo: <q>o cumputador é um burro muito rapido</q></p>
-    <h2>Citacoes Completas</h2>
-    <p>Segunfo jeff noble, no seu livro HTMl para leigos:</p>
-    <blockquote
-        cite="https://br.jooble.org/vagas-de-emprego/São-Paulo%2C-SP?gclid=CjwKCAjwyNSoBhA9EiwA5aYlb-qx0iEH_-Xw5ItGzoQVcxKRDI7FEy43H0NimBNFjnzr612eNZtZohoCl8EQAvD_BwE&utm_content=69549205139&utm_medium=cpc1&utm_source=google">
-        A diferentaca entre elementos inline e um bloco de texto é importante.
-        Os elementos HTML neste capitulo descrevem blocos de texto
-    </blockquote>
-    <h2>Abreviacoes</h2>
-    <p>estou estudando <abbr title="hyper text markup language">html</abbr> e <abbr
-            title="casdade style sheets">css</abbr>. estou suportando, mais ou menos, odeio levemente</p>
-    <h2>texto invertido</h2>
-    <p><bdo dir="rtl">meu pal na sua mao</bdo></p>
-    <p><bdo dir="ltr">meu pal na sua mao</bdo></p>
+    <!-- posso escolher os tipo e tbm escolher onde comeca -->
+    <!-- 1, A, a, I, i -->
+    <ol type="1" start="4">
+        <li>acorda</li>
+        <li>joao te ligao</li>
+        <li>joao atende</li>
+        <li>tomar cafe</li>
+        <li>escovar dentes</li>
+    </ol>
+
+    <h2>lista nao ordenadas</h2>
+    <!-- posso escolher o tipo do marcador da lista -->
+    <!-- disc, circle, square -->
+    <ul type="square">
+        <li>pao</li>
+        <li>pao</li>
+        <li>pao</li>
+        <li>pao</li>
+        <li>de</li>
+        <li>queijo</li>
+        <li>leite</li>
+        <li>sua mae aquela puta</li>
+        <li>teste</li>
+    </ul>
 </body>
 
 </html>
