--- a/modulo1/ex9/index.html
+++ b/modulo1/ex9/index.html
@@ -42,6 +42,46 @@
         <li>sua mae aquela puta</li>
         <li>teste</li>
     </ul>
+
+    <h2>juntando listas</h2>
+    <ol>
+        <li>antigas</li>
+        <ol type="a">
+            <li>fortran</li>
+            <li>C</li>
+        </ol>
+        <li>novas</li>
+        <!-- apesar de selcionar letras, o start é um parametro numerico -->
+        <ol type="a" start="3">
+            <li>python</li>
+            <li>java</li>
+            <li>kotlin</li>
+        </ol>
+    </ol>
+    <h2>meus jogos preferidos</h2>
+    <ol>
+        <li>ness</li>
+        <ul type="square">
+            <li>mario, que mario?</li>
+            <li>ninja gaiberrrr</li>
+        </ul>
+        <li>ps2</li>
+        <ul type="square">
+            <li>gold war, famoso gow</li>
+        </ul>
+    </ol>
+
+    <h2>lista de definicao</h2>
+
+<dl>
+    <dt>html</dt>
+    <dd>linguagem de marcacao, pode falar que ta fazendo logica e regras de negocio, com certeza ta certo, abracos anita do mundo dev</dd>
+    <dt>css</dt>
+    <dd>linguagem para deixar bonitinho, bilhinhos, fogos eeeee</dd>
+    <dt>js</dt>
+    <dd>lang que survou no nome do java, ruim e cheia de gambiarra, geralmente quem sabe, imagina que js é um martelo e todo tipo de problema no mundo dev é prego</dd>
+</dl>
+
 </body>
 
 </html>
