--- a/modulo1/ex10/index.html
+++ b/modulo1/ex10/index.html
@@ -15,6 +15,9 @@
     <p>voce tbm pode <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">acessar o youtube do
             guanabara</a>, puta
         professorzao da porra</p>
+
+    <h2>link interno</h2>
+    <p>pagina 1, se quiser ir para pg2, <a href="pag2.html" rel="next">clique aqui</a></p>
 </body>
 
 </html>
