--- a/modulo1/ex10/index.html
+++ b/modulo1/ex10/index.html
@@ -16,8 +16,16 @@
             guanabara</a>, puta
         professorzao da porra</p>
 
-    <h2>link interno</h2>
-    <p>pagina 1, se quiser ir para pg2, <a href="pag2.html" rel="next">clique aqui</a></p>
+    <h1>link interno</h2>
+        <p>pagina 1, se quiser ir para pg2, <a href="pag2.html" rel="next">clique aqui</a></p>
+
+        <h1>Links para dowload</h1>
+        <ul>
+            <li>aqui ele abre <a href="Deyky_Pinheiro.pdf">exibir meu curriculo</a></li>
+            <li>aqui ele baixa <a href="Deyky_Pinheiro.pdf" download="teste.pdf">baixe meu curriculo</a></li>
+        </ul>
+
+
 </body>
 
 </html>
