--- a/modulo1/ex10/pag2.html
+++ b/modulo1/ex10/pag2.html
@@ -8,12 +8,11 @@
 </head>
 
 <body>
-    <h1>pagina 2 krai, ce é ccego?</h1>
+    <h1>pagina 2 </h1>
     <p>pagina 2, se quiser ir para pg3, <a href="noticia/pag3.html" rel="next">clique aqui</a></p>
     
     <!-- nofollow  é pra "nao passar credibilidade", vc nao garante que aquele link é bom com informacaoes precisa por exeplo-->
-    <p>pagina é um oferecimento? nao sei <a href="https://hostnet.com.br" target="_blank" rel="nofollow">Fakenew Ta
-            Okay?</a></p>
+    <p>pagina é um oferecimento? nao sei <a href="https://hostnet.com.br" target="_blank" rel="nofollow">Fakenews ou coisas que nao sei a procedencia</a></p>
 </body>
 
 </html>
