--- a/modulo1/ex11/index.html
+++ b/modulo1/ex11/index.html
@@ -17,6 +17,22 @@
         <img src="img/foto-g.png" alt="Imagem Flexível">
     </picture>
 
+    <h1>reproduzindo audio</h1>
+    <!-- compativel com  mp3 wag ogg-->
+    <!-- <audio src="./audio/audio.mp3" controls></audio> -->
+
+    <audio preload="metadata" controls>
+        <source src="audio/audio.mp3" type="audio/mpeg">
+        <source src="audio/audio.wag" type="audio/wag">
+        <!-- nao usar ogg -->
+        <source src="audio/audio.ogg" type="audio/ogg">
+        <p>infelizmente seu navegador nao consegue reproduzir o audio <a href="audio/audio.mp3">clique aqui para baixar
+                o arquivo</a></p>
+    </audio>
+
+
+
+
 </body>
 
 </html>
