ex12 videos de terceiro, youtube, vimeo, etc

--- a/modulo1/ex12/index.html
+++ b/modulo1/ex12/index.html
@@ -12,11 +12,17 @@
     <p>este video esta hospedado no mesmo host do front</p>
 
     <!-- videos hospedados assim pode ser muito caro pro seu cliente -->
-    <video width="500" poster="img/limoes-capa.png" controls>
+    <video width="560" height="315" poster="img/limoes-capa.png" controls>
         <source src="video/video-pexel-reduzido.mp4" type="video/mp4">
         <source src="video/video-pexel-reduzido.mp4" type="video/mp4">
         <p>seu navegado nnão é compativel com a reprodução deste video!</p>
     </video>
+
+    <h1>video de terceiros</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=FYKkIc7ePte7_YFK"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
 
 </body>
 
