ex17 tamanho das fontes

--- a/modulo1/ex17/index.html
+++ b/modulo1/ex17/index.html
@@ -7,9 +7,21 @@
     <title>Fonts</title>
 
     <style>
+        /* 
+        Medidas Absolutas:
+        cm, mm, in, px, pt, pc
+
+        Medidas Relativas:
+        em, ex, rem, vw, vh, %
+        
+
+        apenas o "px" e o "em"
+        16px costuma ser o tamanho padrao da letra que é o mesmo que 1em
+        */
         body {
             font-family: Arial, Helvetica, sans-serif;
             /* font-family: 'Courier New', Courier, monospace; */
+            /* font-size: 16px; */
         }
 
         h1,
