ex19 seletor de classe

--- a/modulo1/ex19/seletor1.html
+++ b/modulo1/ex19/seletor1.html
@@ -12,28 +12,28 @@
 <body>
     <h1 id="principal">Site Em HTML </h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML Básico</h2>
+    <h2 class="basico">HTML Básico</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
-    <h2>HTML Intermédiario</h2>
+    <h2  class="intermediario">HTML Intermédiario</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
-    <h2>HTML Avançado</h2>
+    <h2 class="avancado">HTML Avançado</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
-    <h1>Aprendendo CSS</h1>
-    <h2>CSS Básico</h2>
+    <h1 >Aprendendo CSS</h1>
+    <h2 class="basico">CSS Básico</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
-    <h2>CSS Intermédiario</h2>
+    <h2 class="intermediario">CSS Intermédiario</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
-    <h2>CSS Avançado</h2>
+    <h2 class="avancado">CSS Avançado</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque omnis veritatis, itaque cumque aliquid
         temporibus blanditiis amet, id cupiditate velit eveniet eum voluptates vel praesentium natus perferendis maiores
         distinctio.</p>
