ex21 grouping tags

--- a/modulo1/ex21/caixa1.html
+++ b/modulo1/ex21/caixa1.html
@@ -24,6 +24,8 @@
 
         a {
             background-color: chartreuse;
+
+            /* esta em ordem dos borders */
             border-width: 10px;
             border-style: solid;
             border-color: red;
