--- a/modulo1/ex21/caixa2.html
+++ b/modulo1/ex21/caixa2.html
@@ -28,8 +28,12 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 0.5px;
-            margin: 0px;
+            padding: 10px;
+        }
+
+        /* funciona igual footer > p */
+        footer p {
+            margin: 0;
         }
 
         article {
@@ -40,18 +44,31 @@
             background-color: orange;
         }
 
+        nav {
+            background-color: rgba(255, 166, 0, 0.993);
+            padding: 3px;
+            /* 
+            na ordem: 
+            1- espalhamento horizontal
+            2- espalhamento vertical 
+            3- espalhamento
+            4- cor
+        */
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.200);
+        }
+
         nav>a {
             text-decoration: none;
-            color: tomato;
+            color: white;
             margin-right: 30px;
-            background-color: rgb(255, 250, 240);
+            /* background-color: rgb(255, 250, 240); */
+
         }
 
         nav>a:hover {
             text-decoration: underline;
             color: blue;
             font-weight: bold;
-
         }
     </style>
 </head>
@@ -60,6 +77,8 @@
     <header>
         <h1>meu site</h1>
         <nav>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
