--- a/modulo1/desafio/d10/index.html
+++ b/modulo1/desafio/d10/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecnologia</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,102 +23,123 @@
 
 
     <main>
-        <h1>História do Mascote do Android</h1>
-        <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para
-            dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma
-            história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
-
-        <h2>A primeira versão</h2>
-        <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele
-            conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô.
-            O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da
-            empresa para a criação de um mascote.</p>
-
-        <!-- foto dos bonecos lado a lado -->
-        <picture>
-            <source media="(max-width: 750px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <source media="(max-width: 1050px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <img src="img/dan-droids-pq.png" alt="Imagem Flexível">
-        </picture>
-
-        <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
-
-        <h2>Surge um novo mascote</h2>
-        <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A
-            ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô
-            de uma maneira mais agradável.
-        </p>
-
-        <!-- fota da mulher -->
-        <picture>
-            <source media="(max-width: 750px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <source media="(max-width: 1050px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <img src="img/dan-droids-pq.png" alt="Imagem Flexível">
-        </picture>
-
-        <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
-            desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote
-            do Android.
-        </p>
-
-        <!-- fota da apertadno a mao do android -->
-        <picture>
-            <source media="(max-width: 750px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <source media="(max-width: 1050px)" srcset="img/dan-droids-pq.png" type="image/png">
-            <img src="img/dan-droids-pq.png" alt="Imagem Flexível">
-        </picture>
-
-        <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de
-            banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no
-            escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo,
-            objetivo.
-        </p>
-
-        <!-- video -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=FYKkIc7ePte7_YFK"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-
-        <section id="extra">
-            <h3>Quer aprender mais? </h3>
-            <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce,
-                em ordem alfabética a partir da versão 1.5 até a 9.0.
+        <article>
+            <h1>História do Mascote do Android</h1>
+            <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo
+                <strong>Google</strong> é um dos
+                mais utilizados
+                para
+                dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e
+                uma
+                história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
             </p>
 
+            <h2>A primeira versão</h2>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado<a
+                    href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/"
+                    target="_blank"> Dan
+                    Morrill</a>.
+                Ele
+                conta que abriu o <a href="https://inkscape.org" target="_blank">Inkscape</a> (software livre para
+                vetorização de imagens) e criou sua própria versão de
+                robô.
+                O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação
+                da
+                empresa para a criação de um mascote.</p>
 
-            <li>1.5 - Cupcake</li>
-            <li>1.6 - Donut</li>
-            <li>3.0 - Eclair</li>
-            <li>2.2 - Froyo</li>
-            <li>2.3 - Gingerbread</li>
-            <li>3.0 - Honeycomb</li>
-            <li>4.0 - Ice Cream Sandwich</li>
-            <li>4.1 - Jelly Bean</li>
-            <li>4.4 - KitKat</li>
-            <li>5.0 - Lolipop</li>
-            <li>6.0 - Marshmallow</li>
-            <li>7.0 - Nougat</li>
-            <li>8.0 - Oreo</li>
-            <li>9.0 - Pie</li>
+            <!-- foto dos bonecos lado a lado -->
+            <picture>
+                <source media="(max-width: 1100px)" srcset="img/dan-droids.png" type="image/png">
+                <img src="img/dan-droids.png" alt="primeiro mascote do android">
+            </picture>
 
-            <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou
-                a usar numerações, o que deu origem ao Android 10.
+            <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
+
+            <h2>Surge um novo mascote</h2>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A
+                ilustradora Russa <a href="https://www.irinablok.com" target="_blank">Irina Blok</a>, também funcionária
+                do Google, ficou com a missão de representar o pequeno
+                robô
+                de uma maneira mais agradável.
             </p>
-            <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma
-                trouxe para o sistema Android.
-            </p>
-        </section>
 
-        <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e
-            seu simpático mascote.
-        </p>
+            <!-- fota da mulher -->
+            <picture>
+                <source media="(max-width: 700px)" srcset="img/irina-blok-pq.jpg" type="image/png">
+                <img src="img/irina-blok.jpg" alt="irinia blok, criadora do bugdroid">
+            </picture>
+
+            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
+                desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo
+                mascote
+                do Android.
+            </p>
+
+            <!-- fota da apertadno a mao do android -->
+            <picture>
+                <img src="img/bugdroid.png" alt="bugdroid">
+            </picture>
+
+            <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que
+                ilustram portas de
+                banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no
+                escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo,
+                objetivo.
+            </p>
+
+            <!-- video -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=FYKkIc7ePte7_YFK"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>
+            </iframe>
+
+            <section id="extra">
+                <h3>Quer aprender mais? </h3>
+                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um
+                    doce,
+                    em ordem alfabética a partir da versão 1.5 até a 9.0.
+                </p>
+
+                <ul>
+                    <li>1.5 - <abbr title="bolo de copp">Cupcake</abbr></li>
+                    <li>1.6 - <abbr title="rosquinha">Donut</abbr></li>
+                    <li>3.0 - <abbr title="bomda de chocolate">Eclair</abbr></li>
+                    <li>2.2 - <abbr title="iorgute congelado">Froyo</abbr></li>
+                    <li>2.3 - <abbr title="biscoito de gengibre">Gingerbread</abbr></li>
+                    <li>3.0 - <abbr title="favo de mel">Honeycomb</abbr></li>
+                    <li>4.0 - <abbr title="sanduiche de sorvete">Ice Cream Sandwich</abbr></li>
+                    <li>4.1 - <abbr title="jujuba">Jelly Bean</abbr></li>
+                    <li>4.4 - <abbr title="KitKat">KitKat</abbr></li>
+                    <li>5.0 - <abbr title="pirulito">Lolipop</abbr></li>
+                    <li>6.0 - <abbr title="Marshmallow">Marshmallow</abbr></li>
+                    <li>7.0 - <abbr title="torrone">Nougat</abbr></li>
+                    <li>8.0 - <abbr title="Oreo">Oreo</abbr></li>
+                    <li>9.0 - <abbr title="torta">Pie</abbr></li>
+                </ul>
+
+                <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa
+                    divertida prática e
+                    começou
+                    a usar numerações, o que deu origem ao Android 10.
+                </p>
+                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android
+                        History</a> para conhecer a sequência das versões "adocicadas" e o que cada
+                    uma
+                    trouxe para o sistema Android.
+                </p>
+            </section>
+
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android
+                e
+                seu simpático mascote.
+            </p>
+        </article>
     </main>
 
 
     <footer>
-        <p>Desenvolvido Por Deyky Pinheiro</p>
+        <p>Desenvolvido Por <a href="https://github.com/deykypinheiro" target="_blank">Deyky Pinheiro</a></p>
     </footer>
 
 </body>
