d10 inicio de responsividade

--- a/modulo1/desafio/d10/index.html
+++ b/modulo1/desafio/d10/index.html
@@ -49,7 +49,7 @@
 
             <!-- foto dos bonecos lado a lado -->
             <picture>
-                <source media="(max-width: 1100px)" srcset="img/dan-droids.png" type="image/png">
+                <source media="(max-width: 850px)" srcset="img/dan-droids-pq.png" type="image/png">
                 <img src="img/dan-droids.png" alt="primeiro mascote do android">
             </picture>
 
@@ -65,7 +65,7 @@
 
             <!-- fota da mulher -->
             <picture>
-                <source media="(max-width: 700px)" srcset="img/irina-blok-pq.jpg" type="image/png">
+                <source media="(max-width: 850px)" srcset="img/irina-blok-pq.jpg" type="image/png">
                 <img src="img/irina-blok.jpg" alt="irinia blok, criadora do bugdroid">
             </picture>
 
@@ -77,7 +77,7 @@
 
             <!-- fota da apertadno a mao do android -->
             <picture>
-                <img src="img/bugdroid.png" alt="bugdroid">
+                <img class="pequeno" src="img/bugdroid.png" alt="bugdroid">
             </picture>
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que
