d10 fim do modulo 2

--- a/modulo1/desafio/d10/index.html
+++ b/modulo1/desafio/d10/index.html
@@ -88,11 +88,13 @@
             </p>
 
             <!-- video -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=FYKkIc7ePte7_YFK"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-            </iframe>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FdE5G95B7Mg?si=FYKkIc7ePte7_YFK"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
+            </div>
 
             <section id="extra">
                 <h3>Quer aprender mais? </h3>
