ex22 background fixed

--- a/modulo1/ex22/fundo6.html
+++ b/modulo1/ex22/fundo6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste Image de Fundo</title>
+    <title>Fundo fixo de tela</title>
     <style>
         * {
             margin: 0px;
@@ -20,6 +20,20 @@
             background-repeat: no-repeat;
             /* cobre a tela e nao fica cagado */
             background-size: cover;
+
+            /* vinculos:
+            fixed imagem fixa no fundo  e conteudo se mexe */
+            background-attachment: fixed;
+
+            /* shorthand backgroud
+            primeiro color
+            image
+            position
+            repeat
+            size - > costuma nao funcionar
+            attachment */
+
+            /* background: black url(imagens/wallpaper002.jpg) no-repeat cover fixed; */
         }
 
         main {
@@ -37,6 +51,39 @@
     <main>
         <h1>Teste Image de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
+            aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
+            fugiat reprehenderit accusantium at.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            explicabo laboriosam blanditiis, hic
             aspernatur asperiores earum, dicta tenetur minima dignissimos suscipit cupiditate, nobis quos! Earum debitis
             fugiat reprehenderit accusantium at.</p>
     </main>
