ex23 efeito zebrado

--- a/modulo1/ex23/tabela2.html
+++ b/modulo1/ex23/tabela2.html
@@ -19,6 +19,11 @@
             color: white;
         }
 
+        /* isso é o famoso efeito zebrado, posso usar odd ou  even que é impar e par ou usar 2n que é a cada n no caso n sendo 2 ou 2n-1*/
+        tbody tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+
         td,
         th {
             border: 1px solid black;
