--- a/modulo1/ex24/iframe1.html
+++ b/modulo1/ex24/iframe1.html
@@ -19,6 +19,8 @@
         para aprender a programar
     </p>
 
+
+    <!-- google nao aceita ser posto em linha -->
     <p>site do <iframe src="https://www.google.com" frameborder="0"></iframe> também é muito legal</p>
 
 </body>
