--- a/modulo1/ex24/iframe1.html
+++ b/modulo1/ex24/iframe1.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
     <style>
-
+        /* css é soberano em cima das config de iframe */
+        iframe {
+            height: 300px;
+            width: 300px;
+        }
     </style>
 </head>
 
@@ -15,13 +19,27 @@
     <p>Acessando o site do
         <!-- iframe é um quadro na mesma linha -->
 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+
+        <!-- tamanho padrao 300px x 150xp, mas nada me impede de mudar com height e width-->
+        <!-- scrolling="no" 
+            tem yes -> rolagem
+            no -> sem rolagem
+            auto -> se exceder o fram tem barra te rolagem -->
+
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="no" width="1000" height="1000">
+            <!-- aqui aparece algo caso o disposivo não seja compativel com iframe -->
+            <a href="https://www.cursoemvideo.com" target="_blank">cursoemvideo</a>
+
+        </iframe>
         para aprender a programar
     </p>
 
 
     <!-- google nao aceita ser posto em linha -->
-    <p>site do <iframe src="https://www.google.com" frameborder="0"></iframe> também é muito legal</p>
+    <p>site do <iframe src="https://www.google.com" frameborder="0">
+
+
+        </iframe> também é muito legal</p>
 
 </body>
 
