--- a/modulo1/desafio/social/index.html
+++ b/modulo1/desafio/social/index.html
@@ -12,7 +12,19 @@
 <body>
     <main>
         <section class="telefone">
-            <iframe class="conteudo" name="conteudo" src="home.html"></iframe>
+            <iframe class="conteudo" name="conteudo" src="home.html">
+                Seu navegado não é compativel com esse recurso.
+            </iframe>
+        </section>
+        <section class="redres-sociais">
+            <a href="home.html" target="conteudo"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="" target="conteudo"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="" target="conteudo"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
+            <a href="" target="conteudo"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
+            <a href="" target="conteudo"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
+            <a href="" target="conteudo"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+
+
         </section>
     </main>
 
