--- a/modulo1/desafio/social/index.html
+++ b/modulo1/desafio/social/index.html
@@ -12,17 +12,20 @@
 <body>
     <main>
         <section class="telefone">
-            <iframe class="conteudo" name="conteudo" src="home.html">
+            <iframe class="conteudo" name="conteudo" src="paginas/home.html">
                 Seu navegado não é compativel com esse recurso.
             </iframe>
         </section>
-        <section class="redres-sociais">
-            <a href="home.html" target="conteudo"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
-            <a href="" target="conteudo"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
-            <a href="" target="conteudo"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
-            <a href="" target="conteudo"><img src="imagens/logo-instagram.jpg" alt="logo-instagram"></a> <br>
-            <a href="" target="conteudo"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
-            <a href="" target="conteudo"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+        <section class="redes-sociais">
+            <a href="paginas/home.html" target="conteudo"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="paginas/youtube.html" target="conteudo"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <br>
+            <a href="paginas/github.html" target="conteudo"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
+            <a href="paginas/intagram.html" target="conteudo"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+            <br>
+            <a href="paginas/facebook.html" target="conteudo"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+            <br>
+            <a href="paginas/twitter.html" target="conteudo"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
 
 
         </section>
