--- a/modulo1/desafio/social/paginas/home.html
+++ b/modulo1/desafio/social/paginas/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,9 +12,11 @@
         }
 
         body {
+
+
             height: 100hv;
             width: 100vw;
-            background-image: url(imagens/tela-home.jpg);
+            background-image: url(../imagens/tela-home.jpg);
             background-repeat: no-repeat;
             background-size: cover;
         }
