ex25 campos obrigatorios

--- a/modulo1/ex25/form1.html
+++ b/modulo1/ex25/form1.html
@@ -17,7 +17,10 @@
 <body>
     <h1>Meu primeiro Formulario</h1>
     <!-- autocomplete="off" posso adicionar a form e ai ele para de sugerir -->
-    <form action="">
+    <!-- 
+        por padrao tem dois method="" o get, o post
+     -->
+    <form action="cadastro.php">
         <!-- é a lengenda de qual campo -->
         <p>
             <label for="nome_id">nome:</label>
