ex26 media type e media features

--- a/modulo1/ex26/mq1/index.html
+++ b/modulo1/ex26/mq1/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style/impressora.css" media="print">
 </head>
 
+<!-- media query = media features + media types -->
+
 <body>
     <header>
         <h1>noticiais</h1>
