--- a/modulo1/desafio/d16/index.html
+++ b/modulo1/desafio/d16/index.html
@@ -26,7 +26,8 @@
                         <input type="password" name="senha" id="senha_id" placeholder="Digite sua senha">
                     </p>
 
-                    <p><input type="reset" value="Limpar">
+                    <p class="botao">
+                        <input type="reset" value="Limpar">
                         <input type="submit" value="Login">
                     </p>
                 </form>
