--- a/modulo1/desafio/d16/index.html
+++ b/modulo1/desafio/d16/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -17,19 +19,23 @@
                 <p>seja bem vindo(a) novamente. faça login para acessar sua conta e fazer configurações no ambiente</p>
                 <form action="cadastro.php" method="post">
                     <p>
-                        <label for="usuario_id">usuario: </label>
-                        <input type="text" name="usuario" id="usuario_id" placeholder="digite seu usuario">
+
+                        <label for="usuario_id"> <span class="material-symbols-outlined">person</span> </label>
+                        <input type="text" name="usuario" id="usuario_id" placeholder="digite seu usuario" required
+                            maxlength="150">
                     </p>
 
                     <p>
-                        <label for="senha_id">senha: </label>
-                        <input type="password" name="senha" id="senha_id" placeholder="Digite sua senha">
+
+                        <label for="senha_id"> <span class="material-symbols-outlined">key</span></label>
+                        <input type="password" name="senha" id="senha_id" placeholder="Digite sua senha" required minlength="8"
+                            maxlength="100">
                     </p>
 
-                    <p class="botao">
-                        <input type="reset" value="Limpar">
-                        <input type="submit" value="Login">
-                    </p>
+
+                    <input type="submit" class="entrar" value="Entrar">
+                    <a class="esqueci" href="#">Esqueci a senha</a>
+
                 </form>
             </div>
         </section>
